--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -7,6 +7,7 @@
     <fab-command-bar-item key="emailToAuthor" text="Email Author" [iconProps]="{ iconName: 'Mail' }"
       (click)="emailToAuthor()">
     </fab-command-bar-item>
+    <fab-command-bar-item key="favoriteDetector" [text]="pinUnpinDetectorText" [iconProps]="{ iconName: pinUnpinDetectorIcon }" (click)="addOrRemoveDetector()"></fab-command-bar-item >
   </items>
 </fab-command-bar>
 <div style="margin-left:20px">
