--- a/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
@@ -5,8 +5,8 @@
                 <fab-card [isExpandable]="false" [expanded]="true">
                     <div header style="display: flex;justify-content: space-between;min-height: 40px;">
                         <div>{{detector.name}}</div>
-                        <div tabindex="0" (keyup.enter)="removeDetector(detector.id)">
-                            <fab-icon  iconName="Unpin" ariaLabel="Pin Favorite Detector" (onClick)="removeDetector(detector.id)" [styles]="unPinnedIconStyles"></fab-icon>
+                        <div tabindex="0" (keyup.enter)="removeDetector(detector)">
+                            <fab-icon  iconName="Unpin" ariaLabel="Pin Favorite Detector" (onClick)="removeDetector(detector)" [styles]="unPinnedIconStyles"></fab-icon>
                         </div>
                     </div>
                     <div body style="height: 40px;">
@@ -22,7 +22,16 @@
         </div>
     </collapsible-list-item>
 </collapsible-list-fabric>
-<fab-panel></fab-panel>
+<fab-panel [isOpen]="showPanel" [type]="PanelType.Small" [hasCloseButton]="false"
+  [styles]="panelStyles" [isBlocking]="false">
+  <div style="padding: 10px;">
+    <div style="display: flex;align-items: center; font-size: 14px;">
+      <status-icon [status]="panelHealthStatus" class="mr-3"></status-icon>
+      <strong *ngIf="panelErrorMessage === ''">{{panelMessage}}</strong>
+      <strong *ngIf="panelErrorMessage !== ''">{{panelErrorMessage}}</strong>
+    </div>
+  </div>
+</fab-panel>
 
 <ng-template #noFavoriteDetector>
     <div>Pin your favorite and frequent detectors or analysis here to get quick access to troubleshoot.</div>
