--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -16,4 +16,15 @@
 
 <detector-list-analysis #detectorListAnalysis detectorParmName="detector" (updateDowntimeZoomBehavior) = "onUpdateDowntimeZoomBehavior($event)"></detector-list-analysis>
 
+<fab-panel [isOpen]="showPanel" [type]="PanelType.Small" [hasCloseButton]="false"
+  [styles]="panelStyles" [isBlocking]="false">
+  <div style="padding: 10px;">
+    <div style="display: flex;align-items: center; font-size: 14px;">
+      <status-icon [status]="panelHealthStatus" class="mr-3"></status-icon>
+      <strong *ngIf="panelErrorMessage === ''">{{panelMessage}}</strong>
+      <strong *ngIf="panelErrorMessage !== ''">{{panelErrorMessage}}</strong>
+    </div>
+  </div>
+</fab-panel>
+
 <!-- <router-outlet (activate)="onActivate($event)"></router-outlet> -->
