Fix build error

--- a/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
@@ -22,7 +22,7 @@
         </div>
     </collapsible-list-item>
 </collapsible-list-fabric>
-<fab-panel [isOpen]="showPanel" [type]="PanelType.Small" [hasCloseButton]="false"
+<fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false"
   [styles]="panelStyles" [isBlocking]="false">
   <div style="padding: 10px;">
     <div style="display: flex;align-items: center; font-size: 14px;">
