--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -16,7 +16,7 @@
 
 <detector-list-analysis #detectorListAnalysis detectorParmName="detector" (updateDowntimeZoomBehavior) = "onUpdateDowntimeZoomBehavior($event)"></detector-list-analysis>
 
-<fab-panel [isOpen]="showPanel" [type]="PanelType.Small" [hasCloseButton]="false"
+<fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false"
   [styles]="panelStyles" [isBlocking]="false">
   <div style="padding: 10px;">
     <div style="display: flex;align-items: center; font-size: 14px;">
