--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
@@ -15,7 +15,7 @@
 </fab-command-bar>
 <detector-container [analysisMode]="analysisMode" [detector]="detector"></detector-container>
 
-<fab-panel [isOpen]="showPanel" [type]="PanelType.Small" [hasCloseButton]="false"
+<fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false"
   [styles]="panelStyles" [isBlocking]="false">
   <div style="padding: 10px;">
     <div style="display: flex;align-items: center; font-size: 14px;">
