Check for pinned detector per each resource type

--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -21,8 +21,7 @@
   <div style="padding: 10px;">
     <div style="display: flex;align-items: center; font-size: 14px;">
       <status-icon [status]="panelHealthStatus" class="mr-3"></status-icon>
-      <strong *ngIf="panelErrorMessage === ''">{{panelMessage}}</strong>
-      <strong *ngIf="panelErrorMessage !== ''">{{panelErrorMessage}}</strong>
+      <strong>{{panelMessage}}</strong>
     </div>
   </div>
 </fab-panel>
