--- a/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
@@ -1,21 +1,16 @@
 <collapsible-list-fabric [collapsed]="false" [title]="'Pinned Detectors'">
     <collapsible-list-item body>
         <div *ngIf="favoriteDetectorsForDisplay.length>0;else noFavoriteDetector" style="display: flex;">
-            <div *ngFor="let detector of favoriteDetectorsForDisplay" style="width: 300px;min-height: 100px;margin: 0px 5px;">
-                <fab-card [isExpandable]="false" [expanded]="true">
-                    <div header style="display: flex;justify-content: space-between;min-height: 40px;">
-                        <div>{{detector.name}}</div>
-                        <div tabindex="0" (keyup.enter)="removeDetector(detector)">
-                            <fab-icon  iconName="Unpin" ariaLabel="Pin Favorite Detector" (onClick)="removeDetector(detector)" [styles]="unPinnedIconStyles"></fab-icon>
+            <div *ngFor="let detector of favoriteDetectorsForDisplay" class="favorite-card" >
+                <fab-card [isExpandable]="false" [expanded]="true" tabindex="0" (click)="navigate(detector)" (keyup.enter)="navigate(detector)">
+                    <div header class="favorite-card-header">
+                        <div>{{detector.category}}</div>
+                        <div tabindex="0" (keyup.enter)="removeDetector(detector)" (click)="removeDetector($event,detector)">
+                            <fab-icon  iconName="Unpin" ariaLabel="Pin Favorite Detector" [styles]="unPinnedIconStyles"></fab-icon>
                         </div>
                     </div>
-                    <div body style="height: 40px;">
-                        <div>{{detector.description}}</div>
-                    </div>
-                    <div footer>
-                        <div>
-                            <fab-link [href]="''" (onClick)="navigate(detector)">Go To {{detector.type}}</fab-link>
-                        </div>
+                    <div body style="height: 60px;">
+                        <h4 style="color: rgb(0,120,212);font-weight: 600;">{{detector.name}}</h4>
                     </div>
                 </fab-card>
             </div>
@@ -25,7 +20,7 @@
 <fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false"
   [styles]="panelStyles" [isBlocking]="false">
   <div style="padding: 10px;">
-    <div style="display: flex;align-items: center; font-size: 14px;">
+    <div class="notification-panel-container">
       <status-icon [status]="panelHealthStatus" class="mr-3"></status-icon>
       <strong>{{panelMessage}}</strong>
     </div>
