--- a/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/favoite-detectors/favorite-detectors.component.html
@@ -1,12 +1,15 @@
 <collapsible-list-fabric [collapsed]="false" [title]="'Pinned Detectors'">
     <collapsible-list-item body>
         <div *ngIf="favoriteDetectorsForDisplay.length>0;else noFavoriteDetector" style="display: flex;">
-            <div *ngFor="let detector of favoriteDetectorsForDisplay" class="favorite-card" >
-                <fab-card [isExpandable]="false" [expanded]="true" tabindex="0" (click)="navigate(detector)" (keyup.enter)="navigate(detector)">
+            <div *ngFor="let detector of favoriteDetectorsForDisplay" class="favorite-card">
+                <fab-card [isExpandable]="false" [expanded]="true" tabindex="0" (click)="navigate(detector)"
+                    (keyup.enter)="navigate(detector)">
                     <div header class="favorite-card-header">
-                        <div>{{!detector.category ? 'UNCATEGORIZED' : detector.category | uppercase}}</div>
-                        <div tabindex="0" (keyup.enter)="removeDetector(detector)" (click)="removeDetector($event,detector)">
-                            <fab-icon  iconName="Unpin" ariaLabel="Pin Favorite Detector" [styles]="unPinnedIconStyles"></fab-icon>
+                        <div>{{detector.category | uppercase}}</div>
+                        <div tabindex="0" (keyup.enter)="removeDetector(detector)"
+                            (click)="removeDetector($event,detector)">
+                            <fab-icon iconName="Unpin" ariaLabel="Pin Favorite Detector" [styles]="unPinnedIconStyles">
+                            </fab-icon>
                         </div>
                     </div>
                     <div body style="height: 60px;">
@@ -17,14 +20,14 @@
         </div>
     </collapsible-list-item>
 </collapsible-list-fabric>
-<fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false"
-  [styles]="panelStyles" [isBlocking]="false">
-  <div style="padding: 10px;">
-    <div class="notification-panel-container">
-      <status-icon [status]="panelHealthStatus" class="mr-3"></status-icon>
-      <strong>{{panelMessage}}</strong>
+<fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false" [styles]="panelStyles"
+    [isBlocking]="false">
+    <div style="padding: 10px;">
+        <div class="notification-panel-container">
+            <status-icon [status]="panelHealthStatus" class="mr-3"></status-icon>
+            <strong>{{panelMessage}}</strong>
+        </div>
     </div>
-  </div>
 </fab-panel>
 
 <ng-template #noFavoriteDetector>
