--- a/AngularApp/projects/diagnostic-data/src/lib/components/fabric-feedback/fabric-feedback.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/fabric-feedback/fabric-feedback.component.html
@@ -12,7 +12,7 @@
           <div *ngFor="let feedbackIcon of feedbackIcons;let i = index" (click)="setRating(i)"
             [ngClass]="{'selected-icon':rating - 1 === i}" class="feedback-icon hover-item" style="padding: 5px;"
             (keyup.enter)="setRating(i)" tabindex="0" role="button" name="feedback-icon-rating">
-            <fab-icon [iconName]="feedbackIcon.id" [ariaLabel]="feedbackIcon.text"></fab-icon>
+            <fab-icon [iconName]="feedbackIcon.id" [ariaLabel]="feedbackIcon.ariaLabel"></fab-icon>
             <div class="tooltiptext">{{feedbackIcon.text}}</div>
           </div>
         </div>
