--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -4,7 +4,9 @@
   <div class="main-row" style="margin: 0px auto; width: 100%;margin-bottom: 15px;" *ngIf="displayLoader">
     <fab-spinner [size]="loaderSize" [label]="'Loading...'"></fab-spinner>
   </div>
-  <div class="main-row" style="margin: 0 auto; width: 50%; text-align: center; margin-bottom: 15px; font-size: 18px; color: red;" *ngIf="displayUserAccessError">
+  <div class="main-row"
+    style="margin: 0 auto; width: 50%; text-align: center; margin-bottom: 15px; font-size: 18px; color: red;"
+    *ngIf="displayUserAccessError">
     {{userAccessErrorMessage}}
   </div>
   <div class="main-row" style="margin: 0px auto;width: 1240px;" *ngIf="!displayLoader">
@@ -15,45 +17,37 @@
         <h3>Select a resource to begin troubleshooting:</h3>
       </div>
       <div style="width: 50%;">
-        <div class="section" *ngIf="caseNumberNeededForUser && (selectedResourceType && selectedResourceType.userAuthorizationEnabled)">
-          <label for="landing-page-casenumber">
-            Case Number <span class="required">*</span>
-          </label>
-          <div id="landing-page-casenumber">
-            <fab-text-field [ariaLabel]="'Customer case number'" [(value)]="caseNumber"
-              [placeholder]="caseNumberPlaceholder">
-            </fab-text-field>
-            <div *ngIf="caseNumberValidationError && caseNumberValidationError!== ''" class="mt-3 error-message-container">
-              <status-icon [status]="status"></status-icon><span class="ml-3 error-message">{{caseNumberValidationError}}</span>
-            </div>
+        <div class="section"
+          *ngIf="caseNumberNeededForUser && (selectedResourceType && selectedResourceType.userAuthorizationEnabled)">
+          <fab-text-field [ariaLabel]="'Customer case number'" [(value)]="caseNumber"
+            [placeholder]="caseNumberPlaceholder" [label]="'Case Number'" [required]="true"
+            [styles]="fabTextFieldStyles">
+          </fab-text-field>
+          <div *ngIf="caseNumberValidationError && caseNumberValidationError!== ''"
+            class="mt-3 error-message-container">
+            <status-icon [status]="status"></status-icon><span
+              class="ml-3 error-message">{{caseNumberValidationError}}</span>
           </div>
         </div>
         <div class="section">
-          <label for="landing-page-service-type">
-            Service type <span class="required">*</span>
-          </label>
-          <div id="landing-page-service-type">
-            <fab-dropdown [options]="fabDropdownOptions" [selectedKey]="selectedResourceType.id"
-              (onChange)="selectDropdownKey($event)" [styles]="fabDropdownStyles" [ariaLabel]="'Service Type'">
-            </fab-dropdown>
-          </div>
+          <fab-dropdown [options]="fabDropdownOptions" [selectedKey]="selectedResourceType.id"
+            (onChange)="selectDropdownKey($event)" [styles]="fabDropdownStyles" [ariaLabel]="'Service Type'"
+            [required]="true" [label]="'Service type'">
+          </fab-dropdown>
         </div>
         <div class="view-resource-link"><a tabindex="0" (click)="openResourcePanel()">View all supported resource
             types</a></div>
         <div class="section" style="margin-top: 15px;">
-          <label for="landing-page-resource">
-            {{selectedResourceType.resourceTypeLabel}} <span class="required">*</span>
-          </label>
-          <div id="landing-page-resource">
-            <fab-text-field [ariaLabel]="selectedResourceType.resourceTypeLabel" (onChange)="updateResourceName($event)" [(value)]="resourceName"
-              [placeholder]="'Type ' + selectedResourceType.resourceTypeLabel" (keyup.enter)="onSubmit()">
-            </fab-text-field>
-            <div *ngIf="errorMessage!== ''" class="mt-3 error-message-container">
-              <status-icon [status]="status"></status-icon><span class="ml-3 error-message">{{errorMessage}}</span>
-            </div>
+          <fab-text-field [ariaLabel]="selectedResourceType.resourceTypeLabel" (onChange)="updateResourceName($event)"
+            [(value)]="resourceName" [placeholder]="'Type ' + selectedResourceType.resourceTypeLabel"
+            (keyup.enter)="onSubmit()" [required]="true" [label]="selectedResourceType.resourceTypeLabel"
+            [styles]="fabTextFieldStyles">
+          </fab-text-field>
+          <div *ngIf="errorMessage!== ''" class="mt-3 error-message-container">
+            <status-icon [status]="status"></status-icon><span class="ml-3 error-message">{{errorMessage}}</span>
           </div>
         </div>
-        <div class="section">
+        <div class="section" style="display: flex;justify-content: space-between;">
           <label for="landing-page-time-picker">Time range (UTC)</label>
           <div id="landing-page-time-picker" (click)="openTimePicker()" class="time-picker"
             (keydown.enter)="openTimePicker()" tabindex="0" aria-label="Choose time range">
@@ -63,10 +57,11 @@
         </div>
 
         <div class="section">
-            <button type="button" class="btn btn-sm btn-primary" [disabled]="disableSubmitButton" (click)="onSubmit()">Continue</button>
-            <div *ngIf="accessErrorMessage && accessErrorMessage!== ''" class="mt-3 error-message-container">
-              <status-icon [status]="status"></status-icon><span class="ml-3 error-message">{{accessErrorMessage}}</span>
-            </div>
+          <button type="button" class="btn btn-sm btn-primary" [disabled]="disableSubmitButton"
+            (click)="onSubmit()">Continue</button>
+          <div *ngIf="accessErrorMessage && accessErrorMessage!== ''" class="mt-3 error-message-container">
+            <status-icon [status]="status"></status-icon><span class="ml-3 error-message">{{accessErrorMessage}}</span>
+          </div>
         </div>
       </div>
     </div>
@@ -104,7 +99,8 @@
           <h3>Documentation</h3>
         </div>
         <div class="mb-3" *ngFor="let doc of applensDocs">
-          <a class="applens-documentation" [href]="doc.link" target="_blank">{{doc.name}}<i class="hyper-link-icon ml-1" aria-hidden="true"></i></a>
+          <a class="applens-documentation" [href]="doc.link" target="_blank">{{doc.name}}<i class="hyper-link-icon ml-1"
+              aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
