--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.scss
@@ -48,18 +48,13 @@
 }
 
 .section {
-    display: flex;
-    justify-content: space-between;
     margin-top: 26px ;
 }
 
-.section > label {
-    width: 130px;
+::ng-deep .section label {
     font-weight: 400;
-}
-
-.section > div {
-    width: 300px;
+    color: var(--labelText);
+    font-size: 14px;
 }
 
 .time-picker {
