ng-flowchart working on home page

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
@@ -5,7 +5,7 @@
     </section>
     <section [ngClass]="{'content' : category,'content-hide-nav' : !category}" class="mainContentSection">
       <div class="col-md col-ms col-lg" style="width:98%; display: inline-block;">
-        <detector-command-bar [disableGenie]="disableGenie"></detector-command-bar>
+        <!-- <detector-command-bar [disableGenie]="disableGenie"></detector-command-bar> -->
         <div style="padding-left: 20px;">
           <router-outlet></router-outlet>
         </div>
