--- a/AngularApp/projects/diagnostic-data/src/lib/components/fabric-feedback/fabric-feedback.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/fabric-feedback/fabric-feedback.component.html
@@ -20,7 +20,7 @@
         <textarea id="feedback-textarea" [(ngModel)]="feedbackText" tabindex="0" rows="7" cols="35" style="color:var(--bodyText); background-color: var(--bodyBackground);"></textarea>
       </div>
       <!-- Feedback Panel Footer -->
-      <div class="feedback-panel-footer">
+      <!-- <div class="feedback-panel-footer">
         <hr class="feedback-panel-divider">
         <div class="panel-text">
           <div *ngIf="isPublic">
@@ -35,7 +35,7 @@
             </fab-primary-button>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </fab-panel>
