--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-troubleshooter/network-troubleshooter.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-troubleshooter/network-troubleshooter.component.html
@@ -1,5 +1,5 @@
 <div class="network-troubleshooter" #networkCheckingTool>
-    <div class="container">
+    <div class="container" [ngClass]="{'apim-container': !!siteInfo && siteInfo.kind == 'apimanagement'}">
         <div *ngFor="let viewModel of stepViews" >
             <div class="step-container" *ngIf="!viewModel.stepView.hidden" [ngSwitch]="viewModel.stepView.type">
                 <dropdown-step *ngSwitchCase="0" [viewModel]="viewModel"></dropdown-step>
