--- a/AngularApp/projects/applens/src/styles/icons.scss
+++ b/AngularApp/projects/applens/src/styles/icons.scss
@@ -5,7 +5,7 @@
 }
 .hyper-link-icon {
     @extend .icon;
-    background: url('assets/img/applens-skeleton/hyperlink.svg');
+    background: url('../assets/img/applens-skeleton/hyperlink.svg');
     width: 12px;
     height: 12px;
 }
