--- a/AngularApp/projects/diagnostic-data/src/lib/components/comm-alert/comm-alert.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/comm-alert/comm-alert.component.html
@@ -5,20 +5,12 @@
 </ng-container>
 
 <fab-panel [isOpen]="isAlertExpanded" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true" [styles]="panelStyles"
-  [isLightDismiss]="true" [hasCloseButton]="true" [isBlocking]="false" [closeButtonAriaLabel]="'close'" (onDismiss)="dismissPanel()">
+  [isLightDismiss]="true" [hasCloseButton]="true" [isBlocking]="false" [closeButtonAriaLabel]="'close'" (onDismiss)="dismissPanel()" [headerText]="'Service outage detail'">
   <div class="panel-padding">
     <div>
       <div>
-        <div style="margin-bottom: 10px">
-          <div
-            style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end; color:var(--commIssueTitle)"
-            tabindex="0" class="comm-panel-title" aria-label="Comm alerts">
-            Service outage detail</div>
-        </div>
-
         <div class="comm-body" *ngIf="isAlertExpanded">
           <div class="comm-info-container">
-
             <div class="comm-info-row">
               <div class="comm-info-label">Issue</div>
               <div class="issue-title">{{commAlertToShow.title}}</div>
