--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/create-storage-account-panel/create-storage-account-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/create-storage-account-panel/create-storage-account-panel.component.html
@@ -1,11 +1,7 @@
 <fab-panel [isOpen]="globals.openCreateStorageAccountPanel" [type]="type" [customWidth]="width"
   [isHiddenOnDismiss]="true" [isLightDismiss]="true" [hasCloseButton]="true" [isBlocking]="false"  [closeButtonAriaLabel]="'close'"
-  (onDismiss)="dismissedHandler()">
+  (onDismiss)="dismissedHandler()" [headerText]="'Choose Storage account'">
   <div class="panel-padding">
-    <div style="margin-bottom: 10px">
-      <h2>Choose Storage account</h2>
-    </div>
-
     <div class="row mt-5">
       <div class="col-md-6">
         <fab-choice-group [options]="choiceGroupOptions" defaultSelectedKey="CreateNew">
