Fixing angular-react error complaining about nativeElement

--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard-container/dashboard-container.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard-container/dashboard-container.component.html
@@ -1,4 +1,4 @@
-<fab-command-bar tabindex="0" contentClass="fab-command-bar-class">
+<fab-command-bar tabindex="0" [contentClass]="'fab-command-bar-class'">
   <items>
     <fab-command-bar-item key="feedback" role="menu" text="Feedback" [iconProps]="{ iconName: 'Emoji2' }" (click)="openFeedback()">
     </fab-command-bar-item>
