--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
     </fab-dialog-content>
     <fab-dialog-footer>
       <div class="mt-5">
-        <fab-primary-button (onClick)="handleUserResponse(alertInfo.confirmationOptions[0])" contentClass="mr-3" tabindex="1" [disabled]="!(crossSubJustification && crossSubJustification.length>0)">
+        <fab-primary-button (onClick)="handleUserResponse(alertInfo.confirmationOptions[0])" [contentClass]="'mr-3'" tabindex="1" [disabled]="!(crossSubJustification && crossSubJustification.length>0)">
           {{!showLoaderInDialog? alertInfo.confirmationOptions[0].label: 'Loading...'}}
         </fab-primary-button>
         <fab-default-button (onClick)="handleUserResponse(alertInfo.confirmationOptions[1])" tabindex="1">
