--- a/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
@@ -173,7 +173,7 @@
     <fab-dialog-content [title]="deleteDialogTitle">
       <p>This action will remove the detector from the repo. Are you sure you want to delete?</p>
       <div class="mt-5">
-        <fab-primary-button text="Delete" (onClick)="deleteDetector()" contentClass="mr-3">
+        <fab-primary-button text="Delete" (onClick)="deleteDetector()" [contentClass]="'mr-3'">
         </fab-primary-button>
         <fab-default-button text="Cancel" (onClick)="dismissDeleteDialog()"></fab-default-button>
       </div>
@@ -210,7 +210,7 @@
               </div>
             </ng-template>    
             <div style="padding-top: 27px; padding-left: 20px;">
-            <fab-primary-button [disabled]="applyGistButtonDisabled" text="Apply Gist version" (onClick)="gistVersionChange()" contentClass="mr-3" >
+            <fab-primary-button [disabled]="applyGistButtonDisabled" text="Apply Gist version" (onClick)="gistVersionChange()" [contentClass]="'mr-3'" >
             </fab-primary-button>
            </div>
           </div>
@@ -307,7 +307,7 @@
     </fab-message-bar>
   </ng-container>
 
-  <fab-command-bar tabindex="0" [attr.id]="'fab-command-bar'" contentClass="fab-command-bar-class">
+  <fab-command-bar tabindex="0" [attr.id]="'fab-command-bar'" [contentClass]="'fab-command-bar-class'">
     <items>
       <!-- do not use *ngIf on these buttons  -->
       <fab-command-bar-item key="run" [text]="runButtonText" [iconProps]="runIcon" (click)="runCompilation()"
@@ -351,7 +351,7 @@
                     </div>
                     <div style="border-top: 1px solid gray;" class="pt-3 pb-3 callout-padding">
                       <fab-primary-button (onClick)="updateBranch()" (keyup.enter)="updateTableWithOptions()"
-                        [ariaLabel]="'Apply'" contentClass="mr-3 callout-button" contentStyle="border-radius: 2px;">
+                        [ariaLabel]="'Apply'" [contentClass]="'mr-3 callout-button'" contentStyle="border-radius: 2px;">
                         Apply
                       </fab-primary-button>
                       <fab-default-button (onClick)="closeCallout()" (keyup.enter)="closeCallout()"
