--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -39,7 +39,7 @@
         <fab-choice-group [options]="fabChoiceGroupOptions" [selectedKey]="selectedKey"></fab-choice-group>
       </div>
       <div style="border-top: 1px solid gray; padding: 16px;">
-        <fab-primary-button (onClick)="selectFabricKey()" aria-label="apply" contentClass="mr-3">Apply
+        <fab-primary-button (onClick)="selectFabricKey()" aria-label="apply" [contentClass]="'mr-3'">Apply
         </fab-primary-button>
         <fab-default-button (onClick)="showDowntimeCallout=false;" aria-label="cancel">Cancel</fab-default-button>
       </div>
