--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
@@ -1,4 +1,4 @@
-<fab-command-bar tabindex="0" contentClass="fab-command-bar-class">
+<fab-command-bar tabindex="0" [contentClass]="'fab-command-bar-class'">
   <items>
     <fab-command-bar-item key="refresh" text="Refresh" [iconProps]="{ iconName: 'Refresh' }" (click)="refreshPage()">
     </fab-command-bar-item>
