--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list/detector-list.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list/detector-list.component.html
@@ -73,7 +73,7 @@
           </div>
           <div footer>
             <div style="display: flex;align-items: center;margin-bottom: 15px;">
-              <fab-primary-button *ngIf="allSolutionsMap.has(viewModel.model.title)" contentClass="mr-5"
+              <fab-primary-button *ngIf="allSolutionsMap.has(viewModel.model.title)" [contentClass]="'mr-5'"
                 (onClick)="openSolutionPanel(viewModel)" contentStyle="border-radius: 2px;font-size: 13px;">
                 View Solutions</fab-primary-button>
                 <fab-link *ngIf="this.overrideResourceUri == ''" (onClick)="selectDetector(viewModel)">View details</fab-link>
