--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-time-picker/detector-time-picker.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-time-picker/detector-time-picker.component.html
@@ -14,7 +14,7 @@
               showMonthPickerAsOverlay="true" (onSelectDate)="onSelectStartDateHandler($event)" [formatDate]="formatDate"
               [value]="startDate" [parseDateFromString]="parseDateFromString" contentStyle="width:130px;">
             </fab-date-picker>
-            <fab-masked-text-field contentClass="col-md-4" maxLength="6" [(value)]="startClock"
+            <fab-masked-text-field [contentClass]="'col-md-4'" maxLength="6" [(value)]="startClock"
               [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'" [maskChar]="'-'" [validateOnFocusOut]="true"
               [getErrorMessage]="getErrorMessageOnTextField" [ariaLabel]="'startTime'" [styles]="maskTextFieldStyles">
             </fab-masked-text-field>
@@ -28,7 +28,7 @@
               showMonthPickerAsOverlay="true" (onSelectDate)="onSelectEndDateHandler($event)" [formatDate]="formatDate"
               [value]="endDate" [parseDateFromString]="parseDateFromString" contentStyle="width:130px">
             </fab-date-picker>
-            <fab-masked-text-field contentClass="col-md-4" maxLength="6" [(value)]="endClock"
+            <fab-masked-text-field [contentClass]="'col-md-4'" maxLength="6" [(value)]="endClock"
               [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'" [maskChar]="'-'" [validateOnFocusOut]="true"
               [getErrorMessage]="getErrorMessageOnTextField" [ariaLabel]="'endTime'" [styles]="maskTextFieldStyles">
             </fab-masked-text-field>
@@ -39,7 +39,7 @@
       </div>
       <div style="border-top: 1px solid gray;" class="pt-3 pb-3 callout-padding">
         <div class="mr-4">
-          <fab-primary-button (onClick)="applyTimeRange()" contentClass="mr-3">Apply
+          <fab-primary-button (onClick)="applyTimeRange()" [contentClass]="'mr-3'">Apply
           </fab-primary-button>
           <fab-default-button (onClick)="cancelTimeRange()">Cancel</fab-default-button>
         </div>
