Fix contentStyle and enabling Ivy on ASD project

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/create-storage-account-panel/create-storage-account-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/create-storage-account-panel/create-storage-account-panel.component.html
@@ -60,7 +60,7 @@
 
     <div class="footer">
       <hr style="margin-bottom: 20px;">
-      <fab-primary-button contentStyle="margin-left:10px;margin-right:10px" (click)="saveChanges()">
+      <fab-primary-button [contentStyle]="'margin-left:10px;margin-right:10px'" (click)="saveChanges()">
         Save
       </fab-primary-button>
       <fab-default-button (click)="dismissedHandler()">
