--- a/AngularApp/projects/applens/src/app/modules/surveys/components/takesurvey/takesurvey.component.html
+++ b/AngularApp/projects/applens/src/app/modules/surveys/components/takesurvey/takesurvey.component.html
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="form-group go-form">
-            <fab-primary-button contentStyle="margin-top: 20px; margin-left: 10px;" type="Submit" text='Submit Feedback'
+            <fab-primary-button [contentStyle]="'margin-top: 20px; margin-left: 10px;'" type="Submit" text='Submit Feedback'
               (click)="onSubmit()" [disabled]="submitButtonDisabled">
             </fab-primary-button>
           </div>
