--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.html
@@ -16,7 +16,7 @@
       <div style="padding: 18px;">
         <fab-choice-group [selectedKey]="selectedCalloutOption && selectedCalloutOption.key" [options]="calloutOptions" (onChange)="setCalloutSelection($event)" [label]="'Please let us know why!'" [required]="true"></fab-choice-group>
         <div style="text-align: right;">
-          <fab-primary-button contentStyle="margin-top: 20px;"
+          <fab-primary-button [contentStyle]="'margin-top: 20px;'"
                     type="Submit" text='Submit' (click)="onCalloutSubmit()" [disabled]="calloutSubmitDisabled">
           </fab-primary-button>
         </div>
