--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/callstack-panel/callstack-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/callstack-panel/callstack-panel.component.html
@@ -9,7 +9,7 @@
 
     <div class="footer">
       <hr style="margin-bottom: 20px;">
-      <fab-primary-button contentStyle="margin-left:20px" (click)="dismissedHandler()">
+      <fab-primary-button [contentStyle]="'margin-left:20px'" (click)="dismissedHandler()">
         Close
       </fab-primary-button>
     </div>
