--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -67,7 +67,7 @@
                         <div style="display: flex;align-items: center;margin-bottom:15px;">
                           <fab-primary-button *ngIf="allSolutionsMap.has(viewModel.model.title)" [contentClass]="'mr-5'"
                             (onClick)="openSolutionPanel(viewModel)"
-                            contentStyle="border-radius: 2px;font-size: 13px;">View Solutions</fab-primary-button>
+                            [contentStyle]="'border-radius: 2px;font-size: 13px;'">View Solutions</fab-primary-button>
                             <fab-link (onClick)="selectDetector(viewModel)">View details</fab-link>
                             <fab-link *ngIf="!isPublic" (onClick)="selectDetectorNewTab(viewModel)" [styles]="linkStyle">[Open in new tab]</fab-link>
                         </div>
