--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-time-picker/detector-time-picker.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-time-picker/detector-time-picker.component.html
@@ -12,7 +12,7 @@
             <fab-date-picker [minDate]="minDate" [maxDate]="maxDate"
               placeholder="Select a date..." ariaLabel="Select start date" allowTextInput="true"
               showMonthPickerAsOverlay="true" (onSelectDate)="onSelectStartDateHandler($event)" [formatDate]="formatDate"
-              [value]="startDate" [parseDateFromString]="parseDateFromString" contentStyle="width:130px;">
+              [value]="startDate" [parseDateFromString]="parseDateFromString" [contentStyle]="'width:130px;'">
             </fab-date-picker>
             <fab-masked-text-field [contentClass]="'col-md-4'" maxLength="6" [(value)]="startClock"
               [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'" [maskChar]="'-'" [validateOnFocusOut]="true"
@@ -26,7 +26,7 @@
             <fab-date-picker [minDate]="minDate" [maxDate]="maxDate"
               placeholder="Select a date..." ariaLabel="Select end date" allowTextInput="true"
               showMonthPickerAsOverlay="true" (onSelectDate)="onSelectEndDateHandler($event)" [formatDate]="formatDate"
-              [value]="endDate" [parseDateFromString]="parseDateFromString" contentStyle="width:130px">
+              [value]="endDate" [parseDateFromString]="parseDateFromString" [contentStyle]="'width:130px'">
             </fab-date-picker>
             <fab-masked-text-field [contentClass]="'col-md-4'" maxLength="6" [(value)]="endClock"
               [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'" [maskChar]="'-'" [validateOnFocusOut]="true"
@@ -50,7 +50,7 @@
   <!-- </div> -->
 
   <fab-calendar *ngIf="showCalendar"
-    contentStyle="position: absolute;top: 20px;right: 0px ;background: #FFFFFF; padding: 8px; color: var(--infoItemValue); font-size: 14px;">
+    [contentStyle]="'position: absolute;top: 20px;right: 0px ;background: #FFFFFF; padding: 8px; color: var(--infoItemValue); font-size: 14px;'">
     <fab-calendar-strings [months]="dayPickerString.months" [shortMonths]="dayPickerString.shortMonths"
       [days]="dayPickerString.days" [shortDays]="dayPickerString.shortDays" [goToToday]="dayPickerString.goToToday"
       weekNumberFormatString="dayPickerString.weekNumberFormatString"></fab-calendar-strings>
