--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -117,7 +117,7 @@
         role="text"><strong>Downtime</strong></label>
       <fab-dropdown id="downtimeFilter" role="combobox" [options]="fabOptions" (onChange)="selectFabricKey($event)"
         [defaultSelectedKey]="selectedKey" [disabled]="downtimeFilterDisabled"
-        contentStyle="margin-top: -5px; margin-left: 5px;width:{{fabDropdownWidth}}px;min-width:336px">
+        [contentStyle]="'margin-top: -5px; margin-left: 5px;width:{{fabDropdownWidth}}px;min-width:336px'">
       </fab-dropdown>
     </div>
     <div *ngIf="downtimeSelectionErrorStr!=''" class="errorMessage"
