--- a/AngularApp/projects/diagnostic-data/src/lib/components/fab-data-table-filter/fab-data-table-filter.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/fab-data-table-filter/fab-data-table-filter.component.html
@@ -11,9 +11,9 @@
     </ng-container>
   </div>
   <div class="filter-callout-footer callout-padding">
-    <fab-primary-button (onClick)="updateTableWithOptions()" (keyup.enter)="updateTableWithOptions()" [ariaLabel]="'Apply'" [contentClass]="'mr-3 callout-button'" contentStyle="border-radius: 2px;">Apply
+    <fab-primary-button (onClick)="updateTableWithOptions()" (keyup.enter)="updateTableWithOptions()" [ariaLabel]="'Apply'" [contentClass]="'mr-3 callout-button'" [contentStyle]="'border-radius: 2px;'">Apply
     </fab-primary-button>
-    <fab-default-button (onClick)="closeCallout()" (keyup.enter)="closeCallout()" [ariaLabel]="'Cancel'" contentStyle="border-radius: 2px;">Cancel</fab-default-button>
+    <fab-default-button (onClick)="closeCallout()" (keyup.enter)="closeCallout()" [ariaLabel]="'Cancel'" [contentStyle]="'border-radius: 2px;'">Cancel</fab-default-button>
   </div>
 </fab-callout>
 
